<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/material_dark">

    <ImageView
            android:id="@+id/adclogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-25dp"
            android:gravity="center_horizontal"
            app:srcCompat="@drawable/adclogored"/>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Login"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_alignParentTop="true"
            android:layout_marginTop="380dp"
            android:layout_centerInParent="true">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Login"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_alignParentTop="true"
            android:layout_marginTop="460dp"
            app:boxStrokeColor="@color/white"
            android:layout_centerInParent="true">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/main_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="67dp"
            android:paddingRight="67dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@drawable/studentbutton"
            android:clickable="true"
            android:fontFamily="@font/airbnbcerealbold"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:layout_marginTop="600dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"/>
    <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/gear"
            android:id="@+id/gear"
            android:layout_marginTop="16dp" android:layout_alignParentStart="true" android:layout_marginStart="362dp"
            android:layout_alignParentTop="true"/>



</RelativeLayout>
