<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools" android:id="@+id/layout_root"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:background="@color/material_dark">

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Login"
            android:id="@+id/student_name"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_alignParentTop="true"
            android:layout_marginTop="210dp"
            app:boxStrokeColor="@color/white"
            android:layout_centerInParent="true">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/airbnbcerealbold"
                android:textSize="20sp" android:id="@+id/name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Login"
            android:id="@+id/student_email"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_alignParentTop="true"
            android:layout_marginTop="280dp"
            app:boxStrokeColor="@color/white"
            android:layout_centerInParent="true">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/airbnbcerealbold"
                android:textSize="20sp" android:layout_alignStart="@+id/student_email" android:id="@+id/rpiemail"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            style="@style/Login"
            android:id="@+id/msg"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="@string/msg"
            android:layout_alignParentTop="true"
            android:layout_marginTop="350dp"
            app:boxStrokeColor="@color/white"
            android:layout_centerInParent="true">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="5"
                android:gravity="start"
                android:maxLines="100"
                android:padding="10dp"
                android:fontFamily="@font/airbnbcerealbold"
                android:textSize="20sp" android:id="@+id/msg_fixx"/>

    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:id="@+id/fixx_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="67dp"
            android:paddingRight="67dp"
            android:layout_gravity="center"
            android:background="@drawable/studentbutton"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/airbnbcerealbold"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:layout_marginTop="535dp"
            android:layout_alignParentTop="true"
            android:foreground="@drawable/ripple" android:layout_alignParentStart="true"
            android:layout_marginStart="100dp"/>
    <TextView
            android:text="Contact Fixx"
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:id="@+id/fixx_title"
            android:fontFamily="@font/airbnbcerealbold"
            android:textSize="40sp"
            android:textColor="@color/lightGray"
            android:layout_marginTop="130dp" android:layout_alignParentTop="true" android:layout_alignParentStart="true"
            android:layout_marginStart="67dp" android:layout_alignParentEnd="true" android:layout_marginEnd="61dp"/>
    <ImageView
            android:layout_width="90dp"
            android:layout_height="78dp" app:srcCompat="@drawable/ic_phone_forwarded_black_24dp"
            android:id="@+id/imageView4" android:layout_marginTop="43dp" android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" android:layout_marginStart="157dp"/>


</RelativeLayout>